[gd_scene load_steps=13 format=3 uid="uid://02q75f4idhxw"]

[ext_resource type="PackedScene" uid="uid://6i2dxefjcety" path="res://addons/reaction/components/ListObjectFormItem.tscn" id="1_byubm"]
[ext_resource type="Script" path="res://addons/reaction/components/responses_edit_forms/dialog_responses_components/Choice.gd" id="2_cpiw2"]
[ext_resource type="PackedScene" uid="uid://doabmy6rit131" path="res://addons/reaction/components/SearchMenu.tscn" id="3_kn8ok"]
[ext_resource type="PackedScene" uid="uid://bujjba3nge54o" path="res://addons/reaction/components/ListObjectForm.tscn" id="4_fnf1h"]
[ext_resource type="Script" path="res://addons/reaction/scripts/items/ReactionCriteriaItem.gd" id="5_g5kym"]
[ext_resource type="Script" path="res://addons/reaction/scripts/items/ReactionContextModificationItem.gd" id="7_c6onu"]
[ext_resource type="PackedScene" uid="uid://du1las4wvlpxc" path="res://addons/reaction/components/modification.tscn" id="8_0k25i"]
[ext_resource type="Script" path="res://addons/reaction/components/ReactionIText.gd" id="8_ng5pa"]

[sub_resource type="Image" id="Image_iwi8p"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_63oa6"]
image = SubResource("Image_iwi8p")

[sub_resource type="Resource" id="Resource_j3oa1"]
script = ExtResource("5_g5kym")
operation = ""
is_reverse = false
parents = Array[String]([])
uid = "9aab4281-761a-4882-8dfd-d32535fbe433"
label = ""
description = "Item long description"
scope = "Global"
tags = Array[Resource("res://addons/reaction/scripts/ReactionTag.gd")]([])

[sub_resource type="Resource" id="Resource_jbyyi"]
script = ExtResource("7_c6onu")
parents = Array[String]([])
uid = "e50a93d9-8d0a-4fe0-ad95-f099a9890edf"
label = ""
description = "Item long description"
scope = "Global"
tags = Array[Resource("res://addons/reaction/scripts/ReactionTag.gd")]([])

[node name="Choice" instance=ExtResource("1_byubm")]
script = ExtResource("2_cpiw2")
object_name = "choice"
remove_object_function_name = "remove_choice_by_index"

[node name="Columns" parent="." index="0"]
theme_override_constants/separation = 10

[node name="LabelContainer" type="VBoxContainer" parent="Columns" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="Columns/LabelContainer" index="0"]
layout_mode = 2
text = "Label:"

[node name="LabelLineEdit" type="LineEdit" parent="Columns/LabelContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="ChoiceTextContainer" type="VBoxContainer" parent="Columns" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Columns/ChoiceTextContainer" index="0"]
layout_mode = 2
text = "Choice text:"

[node name="ChoiceTextButton" type="Button" parent="Columns/ChoiceTextContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "Choice Text"

[node name="EventContainer" type="VBoxContainer" parent="Columns" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="Columns/EventContainer" index="0"]
layout_mode = 2
text = "Triggers:"

[node name="EventSearchMenu" parent="Columns/EventContainer" index="1" instance=ExtResource("3_kn8ok")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="CriteriasButton" type="Button" parent="Columns" index="4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Criterias"

[node name="ModificationsButton" type="Button" parent="Columns" index="5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Modifications"

[node name="RemoveObjectButton" parent="Columns" index="6"]
tooltip_text = "Remove choice"
icon = SubResource("ImageTexture_63oa6")

[node name="CriteriasDialog" type="AcceptDialog" parent="." index="1"]
unique_name_in_owner = true
title = "Choice Criterias"
size = Vector2i(900, 500)

[node name="Criterias" parent="CriteriasDialog" index="3" instance=ExtResource("4_fnf1h")]
unique_name_in_owner = true
object_name = "criteria"
objects_list_field_name = "criterias"
parent_object_add_function_name = "add_criteria"
object_resource_class = SubResource("Resource_j3oa1")

[node name="ModificationsDialog" type="AcceptDialog" parent="." index="2"]
unique_name_in_owner = true
title = "Choice Modifications"
size = Vector2i(800, 500)

[node name="Modifications" parent="ModificationsDialog" index="3" instance=ExtResource("4_fnf1h")]
unique_name_in_owner = true
object_name = "modification"
objects_list_field_name = "modifications"
parent_object_add_function_name = "add_modification"
object_resource_class = SubResource("Resource_jbyyi")
object_scene = ExtResource("8_0k25i")

[node name="ChoiceTextDialog" type="AcceptDialog" parent="." index="3"]
unique_name_in_owner = true
title = "Choice texts"
size = Vector2i(800, 400)

[node name="ScrollContainer" type="ScrollContainer" parent="ChoiceTextDialog" index="3"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChoiceTexts" type="VBoxContainer" parent="ChoiceTextDialog/ScrollContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("8_ng5pa")
text_field_name = "choice_text"

[connection signal="text_submitted" from="Columns/LabelContainer/LabelLineEdit" to="." method="_on_label_line_edit_text_submitted"]
[connection signal="pressed" from="Columns/ChoiceTextContainer/ChoiceTextButton" to="." method="_on_choice_text_button_pressed"]
[connection signal="item_selected" from="Columns/EventContainer/EventSearchMenu" to="." method="_on_event_search_menu_item_selected"]
[connection signal="pressed" from="Columns/CriteriasButton" to="." method="_on_criterias_button_pressed"]
[connection signal="pressed" from="Columns/ModificationsButton" to="." method="_on_modifications_button_pressed"]
[connection signal="object_added" from="CriteriasDialog/Criterias" to="." method="_on_criterias_object_added"]
[connection signal="object_removed" from="CriteriasDialog/Criterias" to="." method="_on_criterias_object_removed"]
[connection signal="object_added" from="ModificationsDialog/Modifications" to="." method="_on_modifications_object_added"]
[connection signal="object_removed" from="ModificationsDialog/Modifications" to="." method="_on_modifications_object_removed"]
